manifests/go-pub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-pub
  labels:
    app: go-pub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-pub
  template:
    metadata:
      labels:
        app: go-pub
    spec:
      containers:
      - name: go-pub
        image: cheebz/go-pub
        resources: # TODO: Determine eventually
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: go-pub-rsa-volume
          readOnly: true
          mountPath: "/etc/rsa"
        - name: go-pub-rsa-volume
          readOnly: true
          mountPath: "/data/uploads"
      volumes:
        # - name: go-pub-logs
        #   persistentVolumeClaim:
        #     claimName: go-pub-logs-claim
        - name: go-pub-rsa-volume
          secret:
            secretName: go-pub-rsa
        - name: go-pub-uploads-volume
          persistentVolumeClaim:
            claimName: go-pub-uploads
---
apiVersion: v1
kind: Service
metadata:
  name: go-pub-service
spec:
  selector:
    app: go-pub
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
