manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-pub-postgres
  labels:
    app: go-pub-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-pub-postgres
  template:
    metadata:
      labels:
        app: go-pub-postgres
    spec:
      containers:
      - name: go-pub-postgres
        image: postgres:latest
        resources: # TODO: Determine eventually
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: go-pub-postgres-data-volume
          mountPath: "/var/lib/postgresql/data/"
        - name: go-pub-postgres-initdb-volume
          mountPath: "/docker-entrypoint-initdb.d/"
      volumes:
        - name: go-pub-postgres-initdb-volume
          configMap:
            name: go-pub-postgres-initdb
        - name: go-pub-postgres-data-volume
          persistentVolumeClaim:
            claimName: go-pub-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: go-pub-postgres-service
spec:
  selector:
    app: go-pub-postgres
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
